--- a/index.html
+++ b/index.html
@@ -53,13 +53,187 @@
                 </div>
             </div>
         </section>
+        <section class="payment">
+            <hr>
+            <div class="payment-getway">
+                <img src="img/payment/american-express.png" alt="">
+                <img src="img/payment/credit-card.png" alt="">
+                <img src="img/payment/maestro.png" alt="">
+                <img src="img/payment/online-payment.png" alt="">
+                <img src="img/payment/paypal.png" alt="">
+                <img src="img/payment/visa.png" alt="">
+                <img src="img/payment/cashless-payment.png" alt="">
+            </div>
+            <hr>
+        </section>
 
+        <section class="popular-text">
+            <h1>Popular Collection</h1>
+        </section>
+        <section class="product">
+            <div class="product-card">
+                <div class="card">
+                    <img src="img/tripod.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/action.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/camera.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/drone.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/airpod.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/setup.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/single-light.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/mic.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
+                <div class="card">
+                    <img src="img/lights.png" alt="">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <span>4.99</span>
+                    </div>
+                    <p>Wordwide shifting available Buyers protection possible!</p>
+                </div>
 
-
+            </div>
+        </section>
+        <section class="see-more">
+            <h4>See More <i class="fa-solid fa-arrow-right"></i></h4>
+        </section>
+        <!-- --------Footer Top Section---------- -->
+        <section class="footer-top">
+            <div class="footer-top-img">
+                <img src="img/gear.png" alt="">
+            </div>
+            <div class="footer-top-text">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="footer-top-btn">Join Now &nbsp; <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
 
     </main>
 
     <!-- Main End -->
+    <!-- Footer Start  -->
+    <footer>
+        <section class="footer-content">
+            <h1>Influencer products</h1>
+            <p>Copyright © 2022 influencer products</p>
+            <p>All rights reserved</p>
+            <div class="footer-icon">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-dribbble"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i> 
+            </div>
+        </section>
+    </footer>
     <script>
 
         hanburger = document.querySelector(".hanburger");
